# atlas-clean-code-juli-2023-teil1

./: README.md
ArrayFillerProject/: CMakeLists.txt  Caclulator.h  CalculatorExtension.h  main.cpp
ArrayFillerProject/client/: ArrayClient.h
ArrayFillerProject/collections/: abstract_array_factory.h  array_factory.h
ArrayFillerProject/collections/impl/decorators/: array_factory_benchmark_decorator.h  array_factory_logging_decorator.h  array_factory_security_decorator.h
ArrayFillerProject/collections/impl/parallel/: array_factory_auto_impl.h  array_factory_parallel_impl.h
ArrayFillerProject/collections/impl/sequential/: array_factory_sequential_impl.h
ArrayFillerProject/controllers/: BaseController.h
ArrayFillerProject/controllers/impl/: BaseControllerImpl.h
ArrayFillerProject/generators/: generator.h  number_generator.h  number_generator_factory.h
ArrayFillerProject/generators/impl/: GenericGenerator.h
ArrayFillerProject/generators/random/: mersenne_twister_number_generator.h  mersenne_twister_number_generator_factory.h
ArrayFillerProject/tests/: CMakeLists.txt
ArrayFillerProject/tests/collections/: my_dummy_for_abstract_array_factory.h  my_dummy_for_abstract_array_factory_test.cpp  my_dummy_for_abstract_array_factory_test.h
ArrayFillerProject/tests/collections/impl/sequential/: array_factory_sequential_impl_test.cpp  array_factory_sequential_impl_test.h
ArrayFillerProject/time/: stopwatch.h
AufgabeMittwoch/: CMakeLists.txt  main.cpp
TakeGameProject/: CMakeLists.txt  main.cpp
TakeGameProject/client/: GameClient.h
TakeGameProject/game/: AbstractGame.h  Game.h
TakeGameProject/game/Players/: AbstractPlayer.h  Player.h
TakeGameProject/game/TakeGame/: TakeGameImpl.h
TakeGameProject/game/TakeGame/players/: AbstractTakeGamePlayer.h  ComputerPlayer.h  HumanPlayer.h
TakeGameProject/io/: ConsoleWriter.h  Writer.h
ThreadDemo/: main.cpp
TrailingType/: CMakeLists.txt  main.cpp
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
